# yggdrasil2

./: .babelrc  .gitignore  Cargo.toml  circle.yml  deploy_tag.sh  dev-server.js  package.json  webpack.config.js
assets/: index.html  index.js  index.tpl
assets/js/: api.js
assets/styles/: login-page.css  style.css
assets/tags/: dashboard.tag  login-page.tag  yggdrasil.tag
migrations/20170111220353_create_tables/: down.sql  up.sql
src/: logging.rs  main.rs  middleware.rs  password.rs
src/api/: authentication.rs  mod.rs
src/api/internal/: mod.rs
yggdrasil-agent/: Cargo.toml
yggdrasil-agent/src/: main.rs  procapi.rs  steamcmd.rs
yggdrasil-agent/src/init/: mod.rs
