[package]
name = "yggdrasil2"
version = "0.1.0"
authors = ["Dreae <dreae@dreae.onl>"]

[dependencies]
rocket = "0.1.4"
rocket_codegen = "0.1.4"
rocket_contrib = "0.1.4"
diesel = "0.9.0"
diesel_codegen = { version = "0.9.0", features = ["postgres"] }
dotenv = "0.8.0"
r2d2 = "0.7.1"
r2d2-diesel = "0.9.0"
lazy_static = "0.2.2"
serde = "0.8.21"
serde_derive = "0.8.21"