[package]
name = "yggdrasil-agent"
version = "0.1.0"
authors = ["Dreae <dreae@dreae.onl>"]

[dependencies]
getopts = "0.2.14"

[dependencies.nickel]
version = "=0.8"

[dependencies.hyper]
version = "=0.8"

[target.x86_64-unknown-linux-gnu.dependencies]
libc = "0.2.7"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = "0.2.5"
kernel32-sys = "0.2.1"
